--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Data, Gen AI & Business Analysts with Agile and tech agnostic mindset | Interim Managers OÜ</title>
+  <title>Data, Gen AI & Business Analysts with Agile and tech agnostic mindset | Interim Managers OÜ </title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      background: #f4f6f8;
+      background: #e9e8e3;
       color: #333;
       font-size: 1rem;
     }
     header {
-      background: #ffffff;
+      background: #e9e8e3;
       padding: 2rem 1rem;
       text-align: center;
     }
@@ -24,7 +24,7 @@
     .tagline {
       font-size: 0.9rem;
       color: #666;
-      margin-top: -1rem;
+      margin-top: 1rem;
       margin-bottom: 1rem;
     }
     main {
@@ -47,20 +47,22 @@
       color: #007acc;
       text-decoration: none;
     }
-    .contact-form {
-      background: #f1f1f1;
-      padding: 1.5rem;
-      border-radius: 8px;
-    }
+ .contact-form {
+  background: #f1f1f1;
+  padding: 1.5rem;
+  border-radius: 8px;
+  max-width: 800px;
+  margin: 0 auto;
+   }
     .contact-form input,
     .contact-form textarea {
-      width: 100%;
+      width: 95%;
       padding: 0.75rem;
       margin: 0.5rem 0 1rem;
       border: 1px solid #ccc;
       border-radius: 4px;
       font-size: 1rem;
-    }
+   }
     .contact-form button {
       background: #1f85de;
       color: white;
@@ -92,8 +94,9 @@
 
   <header>
     <img src="logo.png" alt="Interim Managers logo" />
+    <h1>Interim Managers OÜ</h1>
     <h1>Data, Gen AI & Business Analysts with Agile and tech agnostic mindset</h1>
-    <p>Agile delivery with customer centric design and data driven execution – Interim Managers OÜ</p>
+    <p>Agile delivery with customer centric design and data driven execution</p>
     <p class="tagline">We don’t consult. We deliver.</p>
   </header>
 
