--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     }
     header img {
       max-width: 120px;
-      margin-bottom: 1rem;
+      margin-bottom: -1rem;
     }
     .tagline {
       font-size: 0.9rem;
@@ -33,9 +33,13 @@
       padding: 2rem 1rem;
       background: #fff;
     }
-    h1, h2 {
+    h1 {
       color: #111;
       font-size: 1.4rem;
+    }
+    h2 {
+      color: #111;
+      font-size: 1.2rem;
     }
     ul {
       padding-left: 1.2rem;
