--- a/index.html
+++ b/index.html
@@ -1,40 +1,179 @@
-Interim Managers logo
-Interim Managers OÜ
-Data, Gen AI & Business Analysts with Agile and tech agnostic mindset
-Agile delivery with customer centric design and data driven execution
-
-We don’t consult. We deliver.
-
-Who We Are
-We join or build delivery teams to solve problems. We offer senior fractional leadership and pragmatic execution in data, AI and cloud delivery. We combine years of cross-sector experience with lean, low-overhead setups that get the job done. We make IT work.
-
-What We Deliver
-BI architecture, data pipelines and reporting (Snowflake, dbt, SQL, Python)
-GenAI copilots and assistants for CRM, KM, ERP and automation
-AI/ML experiments integrated into business processes
-Agile & waterfall project management and team support
-Dashboards: Power BI, Looker, Tableau, ThoughtSpot
-How We Work
-We work embedded or as an external force. Remote-first. We lead or support agile delivery (DevOps, Scrum, Nexus, SAFe). Fast onboarding, clear milestones, clean handoff. No fluff. No delay.
-
-Tech & Tools
-Python, SQL, dbt, Spark, Airflow
-Snowflake, Azure, GCP, BigQuery, Postgres
-Power BI, Looker, Tableau, ThoughtSpot
-OpenAI, Gemini, Claude, LangChain
-Jira, Confluence, GitHub, Docker
-Engagement Options
-Fractional Analyst or Product Owner (4-12 days/month)
-Agile delivery interim management (Scrum Master / RTE / Service Manager)
-Audit & recovery of failing projects or data pipelines
-Architecture, design & toolchain reviews
-Contact
-Your Name: 
- Your Email: 
- Message: 
- Send Message
-We'll reply from hello@imanagers.cloud or follow up directly via phone or Calendly.
-
-© 2025 Interim Managers OÜ · Reg. 17142543
-Harju maakond, Tallinn, Kesklinna linnaosa, Ahtri tn 12, 15551, Estonia
-hello@imanagers.cloud · +48 519 064 148 · Book a call
+<!DOCTYPE html>
+ <html lang="en">
+ <head>
+   <meta charset="UTF-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+   <title>Data, Gen AI & Business Analysts with Agile and tech agnostic mindset | Interim Managers OÜ </title>
+   <style>
+     body {
+       font-family: 'Segoe UI', sans-serif;
+       margin: 0;
+       background: #e9e8e3;
+       color: #333;
+       font-size: 1rem;
+     }
+     header {
+       background: #e9e8e3;
+       padding: 2rem 1rem;
+       text-align: center;
+     }
+     header img {
+       max-width: 120px;
+       margin-bottom: -1rem;
+     }
+     .tagline {
+       font-size: 0.9rem;
+       color: #666;
+       margin-top: 1rem;
+       margin-bottom: 1rem;
+     }
+     main {
+       max-width: 960px;
+       margin: auto;
+       padding: 2rem 1rem;
+       background: #fff;
+     }
+     h1 {
+       color: #111;
+       font-size: 1.4rem;
+     }
+     h2 {
+       color: #111;
+       font-size: 1.2rem;
+     }
+     ul {
+       padding-left: 1.2rem;
+     }
+     section {
+       margin-bottom: 2rem;
+     }
+     a {
+       color: #007acc;
+       text-decoration: none;
+     }
+  .contact-form {
+   background: #f1f1f1;
+   padding: 1.5rem;
+   border-radius: 8px;
+   max-width: 800px;
+   margin: 0 auto;
+    }
+     .contact-form input,
+     .contact-form textarea {
+       width: 95%;
+       padding: 0.75rem;
+       margin: 0.5rem 0 1rem;
+       border: 1px solid #ccc;
+       border-radius: 4px;
+       font-size: 1rem;
+    }
+     .contact-form button {
+       background: #1f85de;
+       color: white;
+       padding: 0.75rem 1.5rem;
+       border: none;
+       border-radius: 4px;
+       font-size: 1rem;
+       cursor: pointer;
+     }
+     .contact-form button:hover {
+       background: #166bb8;
+     }
+     footer {
+       background: #1f2937;
+       color: #ccc;
+       text-align: center;
+       padding: 1.5rem 1rem;
+       font-size: 0.9rem;
+       line-height: 1.6;
+     }
+     @media (max-width: 600px) {
+       header, main {
+         padding: 1.2rem;
+       }
+     }
+   </style>
+ </head>
+ <body>
+ 
+   <header>
+     <img src="logo.png" alt="Interim Managers logo" />
+     <h1>Interim Managers OÜ</h1>
+     <h1>Data, Gen AI & Business Analysts with Agile and tech agnostic mindset</h1>
+     <p>Agile delivery with customer centric design and data driven execution</p>
+     <p class="tagline">We don’t consult. We deliver.</p>
+   </header>
+ 
+   <main>
+     <section>
+       <h2>Who We Are</h2>
+       <p>
+         We join or build delivery teams to solve problems. We offer senior fractional leadership
+         and pragmatic execution in data, AI and cloud delivery. We combine years of cross-sector experience 
+         with lean, low-overhead setups that get the job done. We make IT work.
+       </p>
+     </section>
+ 
+     <section>
+       <h2>What We Deliver</h2>
+       <ul>
+         <li>BI architecture, data pipelines and reporting (Snowflake, dbt, SQL, Python)</li>
+         <li>GenAI copilots and assistants for CRM, KM, ERP and automation</li>
+         <li>AI/ML experiments integrated into business processes</li>
+         <li>Agile & waterfall project management and team support</li>
+         <li>Dashboards: Power BI, Looker, Tableau, ThoughtSpot</li>
+       </ul>
+     </section>
+ 
+     <section>
+       <h2>How We Work</h2>
+       <p>
+         We work embedded or as an external force. Remote-first. We lead or support agile delivery (DevOps, Scrum, Nexus, SAFe). 
+         Fast onboarding, clear milestones, clean handoff. No fluff. No delay.
+       </p>
+     </section>
+ 
+     <section>
+       <h2>Tech & Tools</h2>
+       <ul>
+         <li>Python, SQL, dbt, Spark, Airflow</li>
+         <li>Snowflake, Azure, GCP, BigQuery, Postgres</li>
+         <li>Power BI, Looker, Tableau, ThoughtSpot</li>
+         <li>OpenAI, Gemini, Claude, LangChain</li>
+         <li>Jira, Confluence, GitHub, Docker</li>
+       </ul>
+     </section>
+ 
+     <section>
+       <h2>Engagement Options</h2>
+       <ul>
+         <li>Fractional Analyst or Product Owner (4-12 days/month)</li>
+         <li>Agile delivery interim management (Scrum Master / RTE / Service Manager)</li>
+         <li>Audit and recovery of failing projects or data pipelines</li>
+         <li>Architecture, design and toolchain reviews</li>
+       </ul>
+     </section>
+ 
+     <section>
+       <h2>Contact</h2>
+       <div class="contact-form">
+         <form action="https://formspree.io/f/moveyyow" method="POST">
+           <label for="name">Your Name:</label>
+           <input type="text" id="name" name="name" required />
+ 
+           <label for="email">Your Email:</label>
+           <input type="email" id="email" name="_replyto" required />
+ 
+           <label for="message">Message:</label>
+           <textarea id="message" name="message" rows="5" required></textarea>
+ 
+           <button type="submit">Send Message</button>
+         </form>
+         <p style="font-size: 0.85rem; color: #555;">
+           We'll reply from <strong>hello@imanagers.cloud</strong> or follow up directly via phone or Calendly.<br/>
+         </p>
+       </div>
+     </section>
+   </main>
+ 
+   <footer>
