--- a/index.html
+++ b/index.html
@@ -175,5 +175,15 @@
        </div>
      </section>
    </main>
- 
-   <footer>
+  
+  <footer>
+    © 2025 Interim Managers OÜ · Reg. 
+    <a href="https://ariregister.rik.ee/eng/company/17142543/Interim-Managers-O%C3%9C" target="_blank">17142543</a><br/>
+    Harju maakond, Tallinn, Kesklinna linnaosa, Ahtri tn 12, 15551, Estonia<br/>
+    <a href="mailto:hello@imanagers.cloud">hello@imanagers.cloud</a> · 
+    <a href="tel:+48519064148">+48 519 064 148</a> · 
+    <a href="https://calendly.com/hello-imanagers" target="_blank">Book a call</a>
+  </footer>
+
+</body>
+</html>
